# BAD

./: LICENSE  README.md  project_feedback.xlsx  pyproject.toml  setup.py
.github/workflows/: coverage.yml  test.yml
docs/: README.md  documentation.ipynb  milestone1.ipynb  milestone2.ipynb  milestone2_progress.ipynb
docs/.ipynb_checkpoints/: milestone1-checkpoint.ipynb  milestone2-checkpoint.ipynb
src/bad_package/: ad_interface.py  bad_forward_mode.py  elementary_functions.py  fad.py  interface.py  rad.py
src/bad_package/fad/: ad_interface.py  fad.py  forward_interface.py
tests/: check_coverage.sh  run_tests.sh  test_derivs.py  test_dual_number.py  test_elementary_functions.py  test_fad.py  test_interface.py  test_rad.py
